--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router-dom": "^6.11.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^1.1.0",
+    "sweetalert2": "^11.7.32",
     "three": "^0.152.2"
   },
   "devDependencies": {
