--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-three/fiber": "^8.13.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.12.4",
+    "i18next": "^23.5.1",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.8.0",
+    "react-intl": "^6.4.7",
     "react-router-dom": "^6.11.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
